--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-12343
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>鲍鱼视频最新地址发布页</title>
+<meta name="keywords" content="">
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<meta name="apple-touch-fullscreen" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="format-detection" content="telephone-no">
+<link rel="shortcut icon" href="https://bysp.cc/img/favicon.ico">
+<style>
+*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+body{padding:0;margin:0}
+a,a:active,a:hover,a:link,a:visited{color:#484848;text-decoration:none}
+.main{background-color:#FFF;width:100%;max-width:660px;margin:0 auto;margin-top:10px;margin-bottom:10px;box-shadow:0px 0px 5px 5px #808080;border:1px solid #d6d6d6;padding:10px;border-radius:2px;text-align:center}
+.main .title{text-align:center;font-weight:700;background-color:#F7F7F7;color:#484848;border:1px solid #d6d6d6;padding-top:10px;padding-bottom:10px;margin-bottom:10px;margin-left:-10px;margin-right:-10px}
+.main .goto-1{text-align:center;font-weight:700;color:#484848;margin-bottom:10px;background-color:#F7F7F7;border:1px solid #d6d6d6;border-radius:2px;padding-top:5px;padding-bottom:5px;cursor:pointer;width:46%;margin:1%;display:inline-block}
+.main .goto-1:hover{background:#dfdfdf;color:#ffffff}
+.main .goto-2{text-align:center;font-weight:700;color:#484848;margin-bottom:10px;background-color:#F7F7F7;padding-top:5px;padding-bottom:5px;cursor:pointer;width:46%;margin:1%;display:inline-block}
+.main .goto-3{text-align:center;color:#f90;font-weight:700;font-size:30px;margin-bottom:10px}
+.hide{display:none}
+.we-prompt{display:none;position:fixed;left:0;top:0;bottom:0;height:100%;background-color:#fff;width:100%;z-index:100;padding:10px}
+.we-prompt p{margin-top:5px;margin-bottom:5px}
+.we-prompt .go-index{position:absolute;left:50%;bottom:20px;width:120px;margin-left:-50px;text-align:center;color:#fff;background-color:#090;padding:5px;z-index:110}
+.masked{background-image:-webkit-linear-gradient(left,#3498db,#f47920 10%,#d71345 20%,#f7acbc 30%,#ffd400 40%,#3498db 50%,#f47920 60%,#d71345 70%,#f7acbc 80%,#ffd400 90%,#3498db);color:transparent;-webkit-text-fill-color:transparent;-webkit-background-clip:text;background-size:200% 100%;animation:masked-animation 2s infinite linear}
+@keyframes masked-animation{0%{background-position:0 0}
+100%{background-position:-100% 0}
+}
+#my_centered_buttons{display:flex;justify-content:center}
+</style>
+</head>
+
+<div class="main">
+<img src="https://bysp.cc/img/logo.png">
+<div style="font-size:14px; text-align:center; margin-bottom:10px;">
+为了避免网站失效，请记住我们的官方发布页！</div>
+<div class="masked" style="font-size:18px; text-align:center; margin-bottom:10px; color: #F00; font-weight: bold;">
+按 Ctrl + D 收藏该地址，请截图保存</div>
+<div class="title">鲍鱼视频永久域名：https://bysp.cc</div>
+<div class="goto-1"><a rel="external nofollow" href="https://bsyp1.cc/" target="_blank">地址① bsyp1.cc</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bsyp2.cc/" target="_blank">地址② bsyp2.cc</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bsyp.xyz/" target="_blank">地址③ bsyp.xyz</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bsyp.one/" target="_blank">地址④ bsyp.one</a></div>
+<div class="goto-1" style="width: 95%;">
+<a target="_blank" href="https://bysp88.github.io/">备用发布页：https://bysp88.github.io</a></div>
+<div class="title" style="margin-top:10px;">郵箱获取最新地址</div>
+<div class="goto-3"><a><span>bysp88@gmail.com</span></a></div>
+<div style="font-size:14px; text-align:center; margin-bottom:10px;">
+发送任意邮件到此邮箱可获得最新地址的自动回复</div>
+<div style="font-size:16px; text-align:center; margin-bottom:10px;">
+【鲍鱼视频】建设于2019年，网站接口友好，配色干净、舒适。自网站建立以来始终坚持“纯净·实用·无广告·用户体验至上”的理念，赢得到用户的广泛认可，在业界享有盛誉。<br>
+</div>
+<div style="font-size:16px; text-align:center; margin-top:20px; margin-bottom:10px;">
+CopyRight © 2023</div>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"JnlxTmG3DfeWYV4G",ck:"JnlxTmG3DfeWYV4G"})</script>
+</body>
+</html>
