--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,10 +40,10 @@ a,a:active,a:hover,a:link,a:visited{color:#484848;text-decoration:none}
 <div class="masked" style="font-size:18px; text-align:center; margin-bottom:10px; color: #F00; font-weight: bold;">
 按 Ctrl + D 收藏该地址，请截图保存</div>
 <div class="title">鲍鱼视频永久域名：https://bysp.cc</div>
-<div class="goto-1"><a rel="external nofollow" href="https://bsyp1.cc/" target="_blank">地址① bsyp1.cc</a></div>
-<div class="goto-1"><a rel="external nofollow" href="https://bsyp2.cc/" target="_blank">地址② bsyp2.cc</a></div>
-<div class="goto-1"><a rel="external nofollow" href="https://bsyp.xyz/" target="_blank">地址③ bsyp.xyz</a></div>
-<div class="goto-1"><a rel="external nofollow" href="https://bsyp.one/" target="_blank">地址④ bsyp.one</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址① bysp.one</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址② bysp.one</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址③ bysp.one</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址④ bysp.one</a></div>
 <div class="goto-1" style="width: 95%;">
 <a target="_blank" href="https://bysp88.github.io/">备用发布页：https://bysp88.github.io</a></div>
 <div class="title" style="margin-top:10px;">郵箱获取最新地址</div>
