--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ a,a:active,a:hover,a:link,a:visited{color:#484848;text-decoration:none}
 <div class="goto-1" style="width: 95%;">
 <a target="_blank" href="https://bysp88.github.io/">备用发布页：https://bysp88.github.io</a></div>
 <div class="title" style="margin-top:10px;">郵箱获取最新地址</div>
-<div class="goto-3"><a><span>bysp88@gmail.com</span></a></div>
+<div class="goto-3"><a><span>baoyusp@gmail.com</span></a></div>
 <div style="font-size:14px; text-align:center; margin-bottom:10px;">
 发送任意邮件到此邮箱可获得最新地址的自动回复</div>
 <div style="font-size:16px; text-align:center; margin-bottom:10px;">
