--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>鲍鱼视频最新地址发布页</title>
+<title>&#x9c8d;&#x9c7c;&#x89c6;&#x9891;&#x5730;&#x5740;&#x53d1;&#x5e03;</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
@@ -31,26 +31,26 @@ a,a:active,a:hover,a:link,a:visited{color:#484848;text-decoration:none}
 #my_centered_buttons{display:flex;justify-content:center}
 </style>
 </head>
-
+<body>
 <div class="main">
 <img src="https://bysp.cc/img/logo.png">
 <div style="font-size:14px; text-align:center; margin-bottom:10px;">
-为了避免网站失效，请记住我们的官方发布页！</div>
+&#x4e3a;&#x4e86;&#x907f;&#x514d;&#x7f51;&#x7ad9;&#x5931;&#x6548;&#xff0c;&#x8bf7;&#x8bb0;&#x4f4f;&#x6211;&#x4eec;&#x7684;&#x5b98;&#x65b9;&#x53d1;&#x5e03;&#x9875;！</div>
 <div class="masked" style="font-size:18px; text-align:center; margin-bottom:10px; color: #F00; font-weight: bold;">
-按 Ctrl + D 收藏该地址，请截图保存</div>
-<div class="title">鲍鱼视频永久域名：https://bysp.cc</div>
-<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址① bysp.one</a></div>
-<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址② bysp.one</a></div>
-<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址③ bysp.one</a></div>
-<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">地址④ bysp.one</a></div>
+&#x6309;&#x20;&#x43;&#x74;&#x72;&#x6c;&#x20;&#x2b;&#x20;&#x44;&#x20;&#x6536;&#x85cf;&#x8be5;&#x5730;&#x5740;&#xff0c;&#x8bf7;&#x622a;&#x56fe;&#x4fdd;&#x5b58;</div>
+<div class="title">&#x9c8d;&#x9c7c;&#x89c6;&#x9891;&#x6c38;&#x4e45;&#x57df;&#x540d;&#xff1a;&#x68;&#x74;&#x74;&#x70;&#x73;&#x3a;&#x2f;&#x2f;&#x62;&#x79;&#x73;&#x70;&#x2e;&#x63;&#x63;</div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">&#x5730;&#x5740;&#x2460;&#x20;&#x62;&#x79;&#x73;&#x70;&#x2e;&#x6f;&#x6e;&#x65;</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">&#x5730;&#x5740;&#x2460;&#x20;&#x62;&#x79;&#x73;&#x70;&#x2e;&#x6f;&#x6e;&#x65;</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">&#x5730;&#x5740;&#x2460;&#x20;&#x62;&#x79;&#x73;&#x70;&#x2e;&#x6f;&#x6e;&#x65;</a></div>
+<div class="goto-1"><a rel="external nofollow" href="https://bysp.one/" target="_blank">&#x5730;&#x5740;&#x2460;&#x20;&#x62;&#x79;&#x73;&#x70;&#x2e;&#x6f;&#x6e;&#x65;</a></div>
 <div class="goto-1" style="width: 95%;">
-<a target="_blank" href="https://bysp88.github.io/">备用发布页：https://bysp88.github.io</a></div>
-<div class="title" style="margin-top:10px;">郵箱获取最新地址</div>
-<div class="goto-3"><a><span>baoyusp@gmail.com</span></a></div>
+<a target="_blank" href="https://bysp88.github.io/">&#x5907;&#x7528;&#x53d1;&#x5e03;&#x9875;&#xff1a;&#x68;&#x74;&#x74;&#x70;&#x73;&#x3a;&#x2f;&#x2f;&#x62;&#x79;&#x73;&#x70;&#x38;&#x38;&#x2e;&#x67;&#x69;&#x74;&#x68;&#x75;&#x62;&#x2e;&#x69;&#x6f;</a></div>
+<div class="title" style="margin-top:10px;">&#x90f5;&#x7bb1;&#x83b7;&#x53d6;&#x6700;&#x65b0;&#x5730;&#x5740;</div>
+<div class="goto-3"><a><span>&#x62;&#x61;&#x6f;&#x79;&#x75;&#x73;&#x70;&#x40;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#x6d;</span></a></div>
 <div style="font-size:14px; text-align:center; margin-bottom:10px;">
-发送任意邮件到此邮箱可获得最新地址的自动回复</div>
+&#x53d1;&#x9001;&#x4efb;&#x610f;&#x90ae;&#x4ef6;&#x5230;&#x6b64;&#x90ae;&#x7bb1;&#x53ef;&#x83b7;&#x5f97;&#x6700;&#x65b0;&#x5730;&#x5740;&#x7684;&#x81ea;&#x52a8;&#x56de;&#x590d;</div>
 <div style="font-size:16px; text-align:center; margin-bottom:10px;">
-【鲍鱼视频】建设于2019年，网站接口友好，配色干净、舒适。自网站建立以来始终坚持“纯净·实用·无广告·用户体验至上”的理念，赢得到用户的广泛认可，在业界享有盛誉。<br>
+&#x3010;&#x9c8d;&#x9c7c;&#x89c6;&#x9891;&#x3011;&#x5efa;&#x8bbe;&#x4e8e;&#x32;&#x30;&#x31;&#x39;&#x5e74;&#xff0c;&#x7f51;&#x7ad9;&#x63a5;&#x53e3;&#x53cb;&#x597d;&#xff0c;&#x914d;&#x8272;&#x5e72;&#x51c0;&#x3001;&#x8212;&#x9002;&#x3002;&#x81ea;&#x7f51;&#x7ad9;&#x5efa;&#x7acb;&#x4ee5;&#x6765;&#x59cb;&#x7ec8;&#x575a;&#x6301;&#x201c;&#x7eaf;&#x51c0;&#xb7;&#x5b9e;&#x7528;&#xb7;&#x65e0;&#x5e7f;&#x544a;&#xb7;&#x7528;&#x6237;&#x4f53;&#x9a8c;&#x81f3;&#x4e0a;&#x201d;&#x7684;&#x7406;&#x5ff5;&#xff0c;&#x8d62;&#x5f97;&#x5230;&#x7528;&#x6237;&#x7684;&#x5e7f;&#x6cdb;&#x8ba4;&#x53ef;&#xff0c;&#x5728;&#x4e1a;&#x754c;&#x4eab;&#x6709;&#x76db;&#x8a89;&#x3002;<br>
 </div>
 <div style="font-size:16px; text-align:center; margin-top:20px; margin-bottom:10px;">
 CopyRight © 2023</div>
