--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@ a,a:active,a:hover,a:link,a:visited{color:#484848;text-decoration:none}
 </div>
 <div style="font-size:16px; text-align:center; margin-top:20px; margin-bottom:10px;">
 CopyRight © 2023</div>
-<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id:"JnlxTmG3DfeWYV4G",ck:"JnlxTmG3DfeWYV4G"})</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KFN9B3HDY0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KFN9B3HDY0');
+</script>
 </body>
 </html>
